fix overlapping navigation

--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -19,14 +19,28 @@ body {
   color: #101010;
   display: flex;
   justify-content: center;
+  z-index: -2;
+}
+
+.back {
+  width: 170px;
+  height: 170px;
+  background-color: #f9f9f9;
+  border-radius: 50%;
+  position: relative;
 }
 
 .image {
-  background-color: #e7e7e7;
-  border-radius: 50%;
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  background-size: contain;
+  background-position: 50% 30%;
+  background-repeat: no-repeat;
 }
 
 .BrainhubCarousel__container {
+  position: relative;
   max-width: 100%;
   margin: auto;
 }
@@ -39,7 +53,7 @@ body {
 }
 
 .BrainhubCarousel__arrows:hover:enabled  {
-  background-color: #97be12;
+  background-color: #97e00f;
 }
 
 .BrainhubCarousel__arrows.BrainhubCarousel__arrowRight {
@@ -73,8 +87,16 @@ p {
 
 @media screen and (min-width: 770px) {
   .BrainhubCarousel__container {
-    max-width: 90vw;
-    margin: auto;
-    padding-left: 10%;
+    padding-left: 15%;
+  }
+
+  .back {
+    width: 200px;
+    height: 200px;
+  }
+  
+  .image {
+    width: 250px;
+    height: 250px;
   }
 }
